# skyclass-distill

./: .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  api.py  artifacts.py  cli.py  config.py  distiller.py  downloader.py  library.py  llm.py  llm_schemas.py  main.py  models.py  pipeline.py  prompts.py  skill_builder.py  sources.py  store.py  transcriber.py  upload_store.py
frontend/: app.js  index.html  management.css  styles.css
skills/physics-teaching-patterns/: SKILL.md
skills/physics-teaching-patterns/agents/: openai.yaml
skills/physics-teaching-patterns/references/: output-schema.md
tests/: test_api.py  test_artifacts.py  test_config.py  test_core.py  test_distiller.py  test_llm.py  test_projects.py  test_sources.py  test_upload_store.py
