[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skyclass-distill"
version = "0.3.0"
description = "项目化教学视频管理、Whisper 转写与可追溯教学 Skills 蒸馏工作台"
requires-python = ">=3.10,<3.14"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.32,<1",
  "pydantic>=2.9,<3",
  "PyYAML>=6.0,<7",
  "yt-dlp>=2025.1.15",
  "curl-cffi>=0.11",
  "bilibili-api-python>=17.4.1,<18",
  "aiohttp>=3.12,<4",
  "faster-whisper>=1.1,<2",
]

[project.optional-dependencies]
dev = ["pytest>=8.3,<9", "httpx>=0.27,<1"]

[project.scripts]
skyclass = "app.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["data*", "frontend*", "skills*", "tests*"]
